--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3  # 更新为 v3
+        uses: actions/checkout@v3.2.0  # 更新为 v3.2.0 或更高版本
         with:
           ref: rule-set  # 确保在 rule-set 分支上
 
