--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -48,11 +48,9 @@ jobs:
           git config user.email "wangshuo523@outlook.com"
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GIT }}  # 将 Token 设置为环境变量
         run: |
-          if [ -n "$(git status --porcelain)" ]; then  # 检查是否有变更
-            git add .
-            git commit -m "Update converted files"
-            git push origin rule-set
-          else
-            echo "No changes to commit."
-          fi
+          git add .
+          git commit -m "Update converted files"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/love796-QAQ/Loon-geosite.git rule-set  # 使用 Token 推送
