--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           ref: main  # 检出 main 分支
 
+      - name: Fetch all branches
+        run: |
+          git fetch --all
+
       - name: List branches
         run: git branch -a  # 列出所有本地和远程分支
 
