--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Create rule-set branch if it doesn't exist
         run: |
           git checkout -b rule-set || git checkout rule-set  # 创建或切换到 rule-set 分支
+          rm -rf *  # 删除当前目录下的所有文件和文件夹
           git config user.name "love796-QAQ"
           git config user.email "wangshuo523@outlook.com"
 
