--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -35,7 +35,7 @@ jobs:
           # 临时 .json 文件名
           temp_output_file="temp_output.json"
           # 最终输出的 .txt 文件名
-          final_output_file="converted_txt/${srs_file%.srs}.txt"
+          final_output_file="../converted_txt/${srs_file%.srs}.txt"
 
           # 使用 sing-box 进行转换
           sing-box rule-set decompile --output "$temp_output_file" "$srs_file"
