--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -55,6 +55,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        cd ..
+        git init
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add converted_txt/*.txt
