--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -59,6 +59,7 @@ jobs:
         git init
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add converted_txt/*.txt
+        git config --global init.defaultBranch main
+        git add ../converted_txt/*.txt
         git commit -m "Convert .srs files to .txt"
         git push -f origin rule-set
