--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -62,6 +62,6 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global init.defaultBranch main
-        git add converted_txt/*.txt
+        git add sing-geosite/converted_txt/*.txt
         git commit -m "Convert .srs files to .txt"
         git push -f origin rule-set
