--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -62,7 +62,8 @@ jobs:
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global init.defaultBranch main
+        cd loon-geosite
         ls
-        git add sing-geosite/converted_txt/*.txt
+        git add loon-geosite/sing-geosite/converted_txt/*.txt
         git commit -m "Convert .srs files to .txt"
         git push -f origin rule-set
