--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -55,11 +55,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        cd ..
-        git init
+        cd loon-geosite/sing-geosite
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global init.defaultBranch main
-        git add loon-geosite/sing-geosite/converted_txt/*.txt
+        git add converted_txt/*.txt
         git commit -m "Convert .srs files to .txt"
         git push -f origin rule-set
