--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -55,6 +55,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        cd sing-geosite
         ls
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
