--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -60,4 +60,4 @@ jobs:
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add converted_txt/*.txt
         git commit -m "Convert .srs files to .txt"
-        git push -f origin rule-set
+        git push -f https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/love796-QAQ/loon-geosite.git rule-set || echo "Nothing to push"
