--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -29,13 +29,11 @@ jobs:
     - name: Convert .srs files to .txt
       run: |
         cd sing-geosite
-        # 创建转换输出的目录
-        mkdir -p converted_txt
         for srs_file in *.srs; do
           # 临时 .json 文件名
           temp_output_file="temp_output.json"
           # 最终输出的 .txt 文件名
-          final_output_file="converted_txt/${srs_file%.srs}.txt"
+          final_output_file="${srs_file%.srs}.txt"
 
           # 使用 sing-box 进行转换
           sing-box rule-set decompile --output "$temp_output_file" "$srs_file"
@@ -50,6 +48,11 @@ jobs:
           # 清理临时 .json 文件
           rm "$temp_output_file"
         done
+
+    - name: Delete .srs files
+      run: |
+        cd sing-geosite
+        rm *.srs
 
     - name: Push changes
       env:
