--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -61,6 +61,6 @@ jobs:
         cd sing-geosite
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add converted_txt/*.txt
+        git add *.txt
         git commit -m "Convert .srs files to .txt"
         git push -f https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/love796-QAQ/loon-geosite.git rule-set || echo "Nothing to push"
